# flask-tools

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/Molecular_Minds/: main.py
examples/Molecule_Generation/: main.py
examples/Polymerizer/: main.py
examples/Retrosynthesis/: main.py
examples/aizynthfinder/: main.py
examples/flaskv2/: main.py
flask_mcp/: install.py
flask_mcp/LMO/: get_chemprop2_preds.py  lmo_tool_server.py  molecular_generation_server.py  molecular_minds_property_predictions.py  molecular_property_surrogates_tool_servers.py  molecular_property_utils.py  molecule_pricer.py
flask_mcp/chemistry/: polymerizer.py
flask_mcp/retrosynthesis/: AiZynthTools.py  FLASKv2_reactions.py  aizynth_server.py  flaskv2_tool_server.py  retro_tool_server.py  retrosynthesis_reaction_server.py
flask_tools/: install.py
flask_tools/chemistry/: polymerizer.py  polymerizer_tool_server.py  smarts_reactions.py  smarts_reactions_utils.py  smiles.py  smiles_utils.py
flask_tools/lmo/: get_chemprop2_preds.py  lmo_tool_server.py  lmo_tools.py  molecular_generation_server.py  molecular_minds_property_predictions.py  molecular_property_utils.py  molecule_pricer.py
flask_tools/rag/: embedders.py  prompts.py  rag_mcp_server.py  rag_tokenizers.py  retrievers.py
flask_tools/retrosynthesis/: flaskv2_reactions.py  flaskv2_tool_server.py
flask_tools/utils/: server_utils.py
