[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-mcp-servers"
version = "0.1.0"
description = "FLASK-MCP-SERVERS: Chemistry-tool for FLASK project"
authors = []
license = {file = "LICENSE"}
readme = "README.md"
# The upper limit of <3.13 is due to AiZynthFinder
requires-python = ">=3.11, <3.13"
dependencies = [
    "charge>=0.1.0",
    "mcp>=1.10.0",
    "jsonschema>=4.17.3",
    "loguru>=0.7.0",
    "pydantic>=2.10.7",
    "click",
    "rdkit>=2025.3.6",
    "pre-commit",
    "black",
]

# [tool.setuptools]
# packages = ["charge"]

[tool.setuptools.packages.find]
where = ["."]
include = ["flask_mcp*"]

# This creates the console script
[project.scripts]
flask-mcp-install = "flask_mcp.install:main"

[project.optional-dependencies]
#ollama = ["ollama>=0.5.0"]
#gemini = ["google-genai >=1.19.0"]
#autogen = ["autogen-agentchat>=0.7.0", "autogen-core>=0.7.0", "autogen-ext>=0.7.0", "openai>=2.0.0", "tiktoken>=0.10.0", "autogen-ext[openai]"]
rdkit = ["rdkit>=2025.3.6"]
flask = ["transformers", "peft", "trl", "torch>=2.8.0"]
# This is the manually identified set of necessary tools for AiZynthFinder 4.4.0 to work with a --no-deps install
# pip3 install --no-deps aizynthfinder reaction-utils
aizynthfinder = ["paretoset", "rdchiral", "wrapt_timeout_decorator", "swifter", "apted", "scipy", "onnxruntime", "dask[dataframe]>=2025.9.0", "tables", "networkx", "xxhash", "jinja2", " markupsafe"]
chemprop = ["chemprop>=2.2.0", "torch>=2.8.0", "lightning"]
chemprice = []
test = ["pytest", "pytest-asyncio", "pytest-mock", "responses", "httpx", "requests-mock"]

# Define a set of optional packages for use when deploying persistent data services
pds = ["charge[aizynthfinder,autogen,rdkit,chemprice]"]

all = ["charge[ollama,gemini,autogen,rdkit,flask,aizynthfinder,chemprop,chemprice]"]
